This documents significant changes in the 1.0 branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2023-05-19:

- Fixed a bug in the loop invariants optimizer where a variable for which
  a .get or .getn discipline function is set within a loop is incorrectly
  treated as invariant.

- Fixed three bugs in pathname expansion:
  1. Brace expansion interfered with EREs and other extended pattern
     types used with ~(...) pattern option prefixes, e.g. the {3,6} in
     'ls ~(E)^file[[:digit:]]{3,6}\.txt$' was incorrectly parsed as a
     brace expansion instead of an ERE bound matching 3 to 6 digits.
     That command will now list any matching files such as file1234.txt.
  2. With brace expansion disabled (set +B), any '{' character in a file
     name pattern stopped it from being resolved unless a wildcard followed
     it. Now, 'set +B; ls *{' will list files with names ending in '{'.
  3. Patterns with options such as ~(E)foo failed to match files if the
     pattern resulted from an unquoted variable expansion. With this fix,
     'var="~(E)foo", ls $var' will list files with names containing 'foo'.

2023-05-18:

- Fixed multiple bugs causing incorrect output for relative date specifications
  given as arguments to printf %(dateformat)T. For example, something like
	printf '%(%Y-%m-%d %H:%M)' 'exact 9 weeks ago'
  will now produce the correct output, which is the same as GNU date:
	date '+%Y-%m-%d %H:%M' '9 weeks ago'

- In the ${parameter/pattern/string} search-and-replace expansion, an
  anchored empty pattern will now match the beginning or the end of the
  string, so that ${parameter/#/string} will prefix the string to the
  parameter value and ${parameter/%/string} will append it. Previously,
  these operations were no-ops (equivalent to ${parameter}). This change
  brings ksh 93u+m into line with mksh, zsh and bash.

2023-05-17:
